@@ -46,19 +46,12 @@ public class FileStorageService {
     public String store(@NonNull MultipartFile file) {
         String originalFilename = file.getOriginalFilename();
 
-        System.out.println("file.getOriginalFilename() = " + file.getOriginalFilename());
-        System.out.println("file.getContentType() = " + file.getContentType());
-        System.out.println("file.getSize() = " + file.getSize());
-        System.out.println("file.getName() = " + file.getName());
-
-
         String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
         System.out.println("extension = " + extension);
-
-        String generatedName = "%s.%s".formatted(System.currentTimeMillis(), extension);
+        String generatedName = String.format("%s.%s", System.currentTimeMillis(), extension);
         Path rootPath = Paths.get(UNICORN_UPLOADS_B_4_LIB, generatedName);
         Files.copy(file.getInputStream(), rootPath, StandardCopyOption.REPLACE_EXISTING);
-        Uploads uploadedFile = new Uploads(originalFilename,generatedName,file.getContentType(),(UNICORN_UPLOADS_B_4_LIB+ generatedName),file.getSize());
+        Uploads uploadedFile = new Uploads(originalFilename, generatedName, file.getContentType(), (UNICORN_UPLOADS_B_4_LIB + generatedName), file.getSize());
         repository.save(uploadedFile);
         return generatedName;
     }
@@ -66,7 +59,9 @@ public class FileStorageService {
 
     public UploadsDto loadResource(@NonNull String fileName) throws NoSuchFileException {
         Optional<Uploads> uploads = repository.findByGeneratedName(fileName);
-        if (uploads.isEmpty())throw new NoSuchFileException("not found");
+        if (!uploads.isPresent()) {
+            throw new NoSuchFileException("not found");
+        }
         FileSystemResource resource = new FileSystemResource(UNICORN_UPLOADS_B_4_LIB + fileName);
         return UploadsDto.builder().resource(resource).originalName(uploads.get().getOriginalName()).newName(uploads.get().getGeneratedName()).contentType(uploads.get().getContentType()).size(uploads.get().getSize()).build();
     }
